# AIST-2110-Labs

./: Makefile  classlist_scraper.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cell.yml  style.yml
src/week03/: week3_code.ipynb
src/week04/: week4_code.ipynb
src/week05/: week5_code.ipynb
src/week06/: week6_code.ipynb
src/week07/: grade_formatter.py  week7_code.ipynb
src/week09/: week9_code.ipynb
src/week10/: week10_code.ipynb
src/week11/: week11_code.ipynb
src/week12/: week12_code.ipynb
src/week13/: week13_code.ipynb
src/week14/: week14_code.ipynb
src/week15/: week15_code.ipynb
src/week3/: week3_code.ipynb
src/week4/: week4_code.ipynb
src/week5/: in_class.py  ticket.py  week5_code.ipynb
src/week6/: grades.py  week6_code.ipynb
src/week7/: week7_code.ipynb
tools/: check_notebook_outputs.py
